# thetawave

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  asset_manager.py  asset_manager.sh  build_wasm.sh  netlify.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  web_release.yml
assets/: consumable_assets.assets  consumable_assets.assets.ron  effect_assets.assets  effect_assets.assets.ron  game_audio_assets.assets  game_audio_assets.assets.ron  game_ui_assets.assets.ron  item_assets.assets.ron  mob_assets.assets  mob_assets.assets.ron  player_assets.assets  player_assets.assets.ron  projectile_assets.assets  projectile_assets.assets.ron  ui_assets.assets.ron
assets/data/: abilities.ron  ability_descriptions.ron  backgrounds.ron  behavior_sequences.ron  characters.ron  consumables.ron  effects.ron  formation_pools.ron  game_parameters.ron  items.ron  levels.ron  loot_drops.ron  mob_behavior_attributes.ron  mob_segments.ron  mobs.ron  premade_levels.ron  premade_runs.ron  projectiles.ron  run.ron  text_effects.ron
assets/models/: earth.glb  sun.glb
assets/models/planets/: Mars.glb  Mercury.glb  Neptune.glb  Uranus.glb  Venus.glb
assets/scenes/: earth_sun.scn.ron.bak
crates/thetawave_arcade/: Cargo.toml  README.md
crates/thetawave_arcade/src/: arduino.rs  lib.rs  plugin.rs
crates/thetawave_assets/: Cargo.toml
crates/thetawave_assets/src/: audio.rs  consumable.rs  effect.rs  item.rs  lib.rs  mob.rs  player.rs  projectile.rs  ui.rs
crates/thetawave_interface/: Cargo.toml
crates/thetawave_interface/src/: abilities.rs  animation.rs  assets.rs  audio.rs  camera.rs  character.rs  character_selection.rs  cleanup_tags.rs  engine.rs  health.rs  historical_metrics.rs  input.rs  lib.rs  objective.rs  player.rs  run.rs  spawnable.rs  states.rs  weapon.rs
crates/thetawave_interface/src/game/: counters.rs  current_game_metrics.rs  historical_metrics.rs  mod.rs  options.rs
crates/thetawave_interface/src/options/: input.ron  input.rs  mod.rs
crates/thetawave_storage/: Cargo.toml
crates/thetawave_storage/src/: core.rs  lib.rs  options.rs  plugin.rs  user_stats.rs
crates/thetawave_web/: Cargo.toml  README.md
crates/thetawave_web/src/: fetch_url_with_timeout.js  lib.rs  public_s3_assets.rs  s3.rs
data/: backgrounds.ron  behavior_sequences.ron  characters.ron  consumables.ron  effects.ron  formation_pools.ron  game_parameters.ron  levels.ron  loot_drops.ron  mob_segments.ron  mobs.ron  projectiles.ron  run.ron  spawner.ron
data/bosses/: repeater.ron
scripts/: build_thetawave_for_steam.sh
src/: db.rs  game_over.rs  main.rs  main_menu.rs  pause_menu.rs  states.rs  victory.rs
src/animation/: mod.rs
src/arcade/: mod.rs
src/arena/: barrier.rs  gate.rs  mod.rs
src/assets/: audio.rs  consumable.rs  effect.rs  item.rs  mob.rs  mod.rs  player.rs  projectile.rs  ui.rs
src/audio/: mod.rs
src/background/: mod.rs  resources.rs
src/camera/: mod.rs  screen_shake.rs
src/collision/: contact.rs  instersection.rs  intersection.rs  mod.rs
src/db/: core.rs  mod.rs  plugin.rs  user_stats.rs
src/debug/: mod.rs
src/game/: mod.rs  resources.rs
src/game/counters/: current_game_metrics.rs  mod.rs  plugin.rs
src/game/resources/: mod.rs
src/health/: mod.rs
src/input/: mod.rs
src/level/: mod.rs
src/loot/: consumable.rs  mod.rs
src/misc/: health.rs  mod.rs  spawn.rs
src/options/: config.rs  display.ron  display.rs  input.ron  input.rs  mod.rs
src/player/: mod.rs  spawn.rs
src/player/components/: mod.rs  player.rs
src/player/resources/: character.rs  mod.rs  players.rs
src/player/systems/: abilities.rs  ability.rs  attacks.rs  mod.rs  movement.rs  upgrades.rs
src/run/: formation.rs  level.rs  level_phase.rs  mod.rs  objective.rs  tutorial.rs
src/scanner/: mod.rs
src/spawnable/: behavior.rs  behavior_sequence.rs  mod.rs
src/spawnable/boss/: mod.rs
src/spawnable/boss/repeater/: mod.rs
src/spawnable/consumable/: behavior.rs  mod.rs
src/spawnable/effect/: behavior.rs  mod.rs  spawn.rs
src/spawnable/formation/: mod.rs
src/spawnable/item/: behavior.rs  mod.rs  spawn.rs
src/spawnable/mob/: behavior.rs  health.rs  mod.rs
src/spawnable/mob/mob_segment/: behavior.rs  mod.rs
src/spawnable/projectile/: behavior.rs  mod.rs  spawn.rs  weapon.rs
src/spawnable/spawn/: formation.rs  mod.rs  spawner.rs
src/spawnable/spawner/: formation.rs  mod.rs
src/states/: game.rs  mod.rs  pause_menu.rs
src/tools/: mod.rs
src/ui/: border_gradient.rs  button.rs  character_selection.rs  debug.rs  game.rs  game_center.rs  game_over.rs  instructions.rs  level.rs  main_menu.rs  mod.rs  options_menu.rs  pause_menu.rs  phase.rs  player.rs  stats.rs  victory.rs
src/ui/character_selection/: mod.rs  player_join.rs
src/ui/game/: border_gradient.rs  game_center.rs  level.rs  mod.rs  parent.rs  phase.rs  player.rs
src/ui/main_menu/: button.rs  mod.rs
src/visual/: mod.rs
src/weapon/: mod.rs
steam_build/: thetawave_build.vdf
tests/: test_cli.rs
wasm-page-template/: index.html  script.js  style.css  thetawave-init.js
