[package]
name = "thetawave"
version = "0.1.1"
edition = "2021"

[workspace]
members = [
    "crates/thetawave_interface",
    "crates/thetawave_storage",
    "crates/thetawave_arcade",
    "crates/thetawave_assets",
]

[workspace.dependencies]
serde = "1.0.159"
strum = "0.25.0"
strum_macros = "0.25.1"
thiserror = "1.0"
derive_more = "0.99.17"
bevy_ecs_macros = "0.14.2"
bevy_ecs = "0.14.2"
bevy_asset = "0.14.2"
bevy_reflect = "0.14.2"
bevy_input = "0.14.2"
bevy_state = "0.14.2"
bevy_sprite = "0.14.2"
bevy_text = "0.14.2"
bevy_render = "0.14.2"
bevy_kira_audio = { version = "0.20.0", features = ["mp3", "wav"] }
leafwing-input-manager = { git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", rev = "d32883661c72b4ff01be71ce65d9e9f2375d5f69" }
ron = "0.8.0"
bevy_time = "0.14.2"
bevy_math = "0.14.2"
# We value minimizing the binary sizes and keeping the CLI maximally simple over a more feature complete CLI library
# like clap.
argh = "0.1.12"
rand = "0.8.5"
console_error_panic_hook = "0.1.7"
# check if necessary for multiple crates
bevy_asset_loader = { version = "0.21.0", features = [
    "2d",
    "3d",
    "standard_dynamic_assets",
] }
thetawave_interface = { path = "crates/thetawave_interface" }

[workspace.dependencies.bevy]
version = "0.14.2"
default-features = false
features = [
    # Non-default/'extra' features features
    "serialize",
    # Part of bevy's default features
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "hdr",
    "ktx2",
    "tonemapping_luts",
    "multi_threaded",
    "png",
    "x11",
    "bevy_gizmos",
    "webgl2",
    "zstd",
]

[dev-dependencies]
rstest = "0.18.2"
assert_cmd = "2.0.12"

[dependencies]
bevy = { workspace = true }
bevy_rapier2d = { version = "0.27.0", features = [
    "simd-stable",
    "debug-render-2d",
] }
bevy_asset_loader = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
ron = { workspace = true }
rand = { workspace = true }
bevy_kira_audio = { workspace = true }
winit = "0.30.3"
image = "0.24.6"
thiserror = { workspace = true }
leafwing-input-manager = { workspace = true }
thetawave_interface = { workspace = true }
thetawave_assets = { path = "crates/thetawave_assets" }


# Serial ports do not work in in the browser.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
thetawave_storage = { path = "crates/thetawave_storage", optional = true }
thetawave_arcade = { path = "crates/thetawave_arcade", optional = true }
argh = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }

# optimize dev packages as we don't need them in debug version
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# For bevy-rapier2d
[profile.release]
codegen-units = 1

[features]
arcade = ["thetawave_arcade"]
storage = ["thetawave_storage"]
cli = ["argh"]
