[package]
name = "thetawave_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true}
thiserror = {workspace = true}
derive_more = {workspace = true}
rusqlite = { version = "0.29.0", features = ["bundled"] }
dirs = "5.0.1"
thetawave_interface = {path = "../thetawave_interface"}
