[package]
name = "thetawave_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.74" }
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
console_error_panic_hook = "0.1.7"
bevy_log = { workspace = true}
bevy_app = { workspace = true}
bevy_ecs = { workspace = true}
serde = { workspace = true}
serde_derive = { workspace = true}
serde-xml-rs = { workspace = true}
derive_more = { workspace = true}
async-channel = { workspace = true}
thetawave_interface = {path = "../thetawave_interface"}


[dependencies.web-sys]
version = "0.3.64"
features = [
  'AbortController',
  'AbortSignal',
  'Request',
  'RequestInit',
  'Response',
  'Window',
]
